--- a/package.json
+++ b/package.json
@@ -6,21 +6,12 @@
 	"scripts": {
 		"build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.conf.js",
 		"start": "cross-env NODE_ENV=development webpack server --config ./config/webpack.dev.conf.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"prepare": "husky install"
 	},
 	"lint-staged": {
-		"**/*.ts": [
-			"prettier --config .prettierrc.js --write",
-			"eslint --fix"
-		],
-		"**/*.tsx": [
-			"prettier --config .prettierrc.js --write",
-			"eslint --fix"
+		"src/**/*.{js,jsx,ts,tsx}": [
+			"eslint --fix --quiet"
 		]
 	},
 	"dependencies": {
@@ -77,7 +68,7 @@
 		"file-loader": "^1.1.11",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"html-webpack-plugin": "5.5.0",
-		"husky": "8.0.1",
+		"husky": "^8.0.0",
 		"less": "^3.13.1",
 		"less-loader": "^5.0.0",
 		"lint-staged": "^10.5.4",
